<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipeFragment">

    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/RecipeTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />


    <TextView
        android:id="@+id/recipeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipeTitle"
        android:layout_alignEnd="@+id/recipeTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/recipeSubtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />


    <EditText
        android:id="@+id/recipeName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:hint="@string/hint_recipeName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recipeIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        />

    <EditText
        android:id="@+id/recipeIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:hint="@string/hint_recipeIngredients"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recipeExplain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeName"
        app:layout_constraintVertical_bias="0.276"
        />


    <EditText
        android:id="@+id/recipeExplain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="7dp"
        android:autofillHints=""
        android:hint="@string/hint_recipeExplain"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/chooseImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeIngredients"
        app:layout_constraintVertical_bias="0.333"
        />

    <Button
        android:id="@+id/chooseImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_addImage"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/recipeImage"
        app:layout_constraintEnd_toEndOf="@+id/recipeExplain"
        app:layout_constraintStart_toStartOf="@+id/recipeExplain"
        app:layout_constraintTop_toBottomOf="@+id/recipeExplain"
        />


    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/button_addRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImage"
        app:srcCompat="@mipmap/ic_launcher"
        />

    <Button
        android:id="@+id/button_addRecipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_addRecipe"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />


</androidx.constraintlayout.widget.ConstraintLayout>