<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="5dp"
        android:text="Full Recipe :"
        android:textAlignment="viewEnd"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editfullRecipe"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/editfullRecipe"
        android:layout_width="210dp"
        android:layout_height="73dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editrecipeIngredients" />

    <EditText
        android:id="@+id/editrecipeIngredients"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:text="@string/hint_recipeIngredients"
        android:textAlignment="textStart"
        android:textColor="@color/grey_500"
        android:textSize="24sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editrecipeName" />

   <!-- <TextView
        android:id="@+id/editrecipeIngredients"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:text="@string/hint_recipeIngredients"
        android:textAlignment="textStart"
        android:textColor="@color/grey_500"
        android:textSize="24sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editrecipeName" />-->

    <EditText
        android:id="@+id/editrecipeName"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginRight="5dp"
        android:text="Recipe Name :"
        android:textAlignment="viewEnd"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editrecipeName"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="193dp"
        android:layout_height="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        android:text="Recipe Ingredients :"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editrecipeIngredients"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/editUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editfullRecipe"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/message_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullrecipe_edit"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editrecipeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>